Fix a couple of bugs and improve truncation logic
* Now adds a 'more' link when truncated
* Link to Repository country was broken

Other small fixes and refactoring

--- a/src/css/item.css
+++ b/src/css/item.css
@@ -20,6 +20,16 @@
     margin: 0 0 .5rem;
 }
 
+.description a.more {
+    color: #000;
+    font-weight: bold;
+    box-shadow: none;
+}
+
+.description a.more:hover {
+    text-decoration: underline;
+}
+
 .heading header {
     font-family: serif;
     margin-top: 0;
